--- a/src/index.css
+++ b/src/index.css
@@ -10,7 +10,7 @@
 
 @layer components {
   .form-input-style-1 {
-    @apply px-3 pt-7 pb-3 w-[250px] md:w-[300px] text-sm shadow bg-white bg-opacity-20 rounded-xl placeholder-transparent focus:border-none focus:outline-none;
+    @apply px-3 pt-7 pb-3 w-[250px] md:w-[300px] text-sm shadow bg-white bg-opacity-50 dark:bg-opacity-20 rounded-xl placeholder-transparent focus:border-none focus:outline-none;
   }
   .form-label-style-1 {
     @apply flex gap-1 justify-center items-center absolute left-3 top-2 uppercase text-xs pointer-events-none peer-placeholder-shown:top-5 peer-placeholder-shown:text-sm peer-placeholder-shown:capitalize peer-focus:top-2 peer-focus:uppercase peer-focus:text-sm transition-all duration-200 ease-in;
